--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+#D48EBA
+#C2699D 
+#52A08F
+#BF3E55
+#fff
+
 body {
     margin: 0;
     padding: 0;
@@ -13,15 +19,18 @@ body {
 .calculator-grid {
     background-color: white;
     margin: 100px auto;
-    border: 3px solid green;
+    border: 3px solid #BF3E55;
+    border-radius: 5px;
     max-width: 400px;
     padding: 2px;
 }
 
 #display {
-    background-color: purple;
-    max-height: 200px;
-    min-height: 150px;
+    background-color: white;
+    border: 3px solid #BF3E55;
+    border-radius: 5px;
+    max-height: 1500px;
+    min-height: 100px;
     padding: 20px 8px;
     margin: 5px auto;
     max-width: 390px;
@@ -54,10 +63,11 @@ body {
 
 .buttons > button {
     cursor: pointer;
-    border: 2px solid green;
+    border: 2px solid #BF3E55;
     text-align: center;
     width: 100px;
     height: 100px;
+    border-radius: 3px;
 }
 
 .buttons > button:hover {
