--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,48 @@
-#D48EBA
-#C2699D 
-#52A08F
-#BF3E55
+/* #DF6C99            #1E8793
 #fff
+
+#7D99EA
+#861111
+
+
+
+*/
+
 
 body {
     margin: 0;
     padding: 0;
     width: 100%;
     font-size: 16px;
-    background-color: blue;
+    font-family: 'Roboto', sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: #C051FF;
+    background: -moz-linear-gradient(45deg, #C051FF 0%, #39BEFF 70%, #421A92 100%);
+    background: -webkit-linear-gradient(45deg, #C051FF 0%, #39BEFF 70%, #421A92 100%);
+    background: linear-gradient(45deg, #C051FF 0%, #39BEFF 70%, #421A92 100%);
 }
 
 .calculator-grid {
     background-color: white;
     margin: 100px auto;
-    border: 3px solid #BF3E55;
+    border: 3px solid rgba(83, 102, 156, 0.8);
     border-radius: 5px;
+    box-shadow: 3px 3px 3px rgba(61, 68, 88, 0.7),
+                -3px -3px 3px rgba(61, 68, 88, 0.7),
+                6px 6px 5px rgba(83, 102, 156, 0.5),
+                -6px -6px 5px rgba(83, 102, 156, 0.5),
+                8px 8px 10px rgba(134, 17, 17, 0.2),
+                -8px -8px 10px rgba(134, 17, 17, 0.2);
     max-width: 400px;
     padding: 2px;
 }
 
 #display {
     background-color: white;
-    border: 3px solid #BF3E55;
+    border: 3px solid rgba(83, 102, 156, 0.8);
     border-radius: 5px;
     max-height: 1500px;
     min-height: 100px;
@@ -38,18 +53,25 @@ body {
     flex-direction: column;
     align-items: end;
     justify-content: space-between;
+    color: rgb(61, 68, 88);
+    box-shadow: 3px 3px 3px rgba(61, 68, 88, 0.3),
+                -3px -3px 3px rgba(61, 68, 88, 0.3);
 }
 
 #display > div {
     margin-right: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 #prev-display {
     font-size: 1.5em;
+    color: rgba(61, 68, 88, 0.7);
 }
 
 #current-display {
     font-size: 2em;
+    color: rgb(61, 68, 88);
 }
 
 .buttons {
@@ -63,15 +85,21 @@ body {
 
 .buttons > button {
     cursor: pointer;
-    border: 2px solid #BF3E55;
+    border: 2px solid rgba(83, 102, 156, 0.8);
+    background-color: white;
     text-align: center;
     width: 100px;
     height: 100px;
     border-radius: 3px;
+    color: rgb(61, 68, 88);
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .buttons > button:hover {
-    background-color: pink;
+    background-color: rgba(57, 190, 255, 0.4);
+    transition-timing-function: ease-out;
+    transition: 0.3s;
 }
 
 @media screen and (max-width: 500px) {
